--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -17,9 +17,8 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: 'npm'
-      - run: npm ci
-      - run: npm run build
+      - run: npm install
+      - run: npm run build --workspace=frontend
       - name: Setup Pages
         uses: actions/configure-pages@v4
       - name: Upload artifact
@@ -29,4 +28,3 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
-
