--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,8 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: '20'
+          cache: 'npm'
+          cache-dependency-path: package-lock.json
       - run: npm install
       - name: Run ESLint
         run: npm run lint || echo "Lint completed with warnings"
@@ -34,6 +36,8 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: '20'
+          cache: 'npm'
+          cache-dependency-path: package-lock.json
       - run: npm install
       - name: Run tests
         run: npm run test --workspace=${{ matrix.workspace }} || echo "Tests completed"
@@ -56,6 +60,8 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: '20'
+          cache: 'npm'
+          cache-dependency-path: package-lock.json
       - run: npm install
       - name: Build frontend
         run: npm run build --workspace=frontend || echo "Frontend build completed"
