--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -30,6 +30,8 @@ jobs:
           cache-dependency-path: package-lock.json
       - run: npm install
       - name: Build frontend
+        env:
+          NODE_ENV: production
         run: npm run build --workspace=frontend
       - name: Setup Pages
         uses: actions/configure-pages@v4
